init: set up workspaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,24 @@
-[package]
-name = "package"
+[workspace]
+members = [ "castelia-*" ]
+resolver = "3"
+
+[workspace.package]
+name = "castelia"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[workspace-dependencies]
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+
+[workspace.lints.clippy]
+panic       = "deny"
+unwrap_used = "deny"
+expect_used   = "warn"
+
+todo          = "warn"
+unimplemented = "warn"
+unreachable   = "warn"
+
+dbg_macro = "warn"
