init: set up broadcast server

--- a/castelia-broadcast/Cargo.toml
+++ b/castelia-broadcast/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "castelia-broadcast"
 version = "0.1.0"
-edition = "2024"
+edition.workspace = true
 
 [dependencies]
+axum.workspace = true
+tokio.workspace = true
+anyhow.workspace = true
 
 [lints]
 workspace = true
