--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ name = "castelia"
 version = "0.1.0"
 edition = "2024"
 
-[workspace-dependencies]
+[workspace.dependencies]
+axum = "0.8.7"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+tokio = { version = "1", features = ["full"] }
+
+anyhow = "1.0"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
