--- a/castelia-broadcast/Cargo.toml
+++ b/castelia-broadcast/Cargo.toml
@@ -7,6 +7,8 @@ edition.workspace = true
 axum.workspace = true
 tokio.workspace = true
 anyhow.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
 
 [lints]
 workspace = true
