--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ axum = "0.8.7"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio = { version = "1", features = ["full"] }
-
+tower-http = { version = "0.6.8", features = ["trace"] }
 anyhow = "1.0"
 
 [workspace.lints.rust]
