--- a/castelia-broadcast/Cargo.toml
+++ b/castelia-broadcast/Cargo.toml
@@ -9,6 +9,7 @@ tokio.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+tower-http.workspace = true
 
 [lints]
 workspace = true
