feat(rtmp): initialize rtmp server structure

--- a/castelia-rtmp/Cargo.toml
+++ b/castelia-rtmp/Cargo.toml
@@ -4,6 +4,8 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+tokio.workspace = true
+tracing = { workspace = true, features = ["log"] }
 
 [lints]
 workspace = true
