--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.6.8", features = ["trace"] }
+thiserror = "2"
 anyhow = "1.0"
 
 [workspace.lints.rust]
