--- a/castelia-rtmp/Cargo.toml
+++ b/castelia-rtmp/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 tokio.workspace = true
 tracing = { workspace = true, features = ["log"] }
+thiserror.workspace = true
 
 [lints]
 workspace = true
