--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.6.8", features = ["trace"] }
 thiserror = "2"
 anyhow = "1.0"
+rand = "0.9.2"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
