--- a/castelia-rtmp/Cargo.toml
+++ b/castelia-rtmp/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 tokio.workspace = true
 tracing = { workspace = true, features = ["log"] }
 thiserror.workspace = true
+rand.workspace = true
 
 [lints]
 workspace = true
