--- a/castelia-rtmp/Cargo.toml
+++ b/castelia-rtmp/Cargo.toml
@@ -8,6 +8,7 @@ tokio.workspace = true
 tracing = { workspace = true, features = ["log"] }
 thiserror.workspace = true
 rand.workspace = true
+bytes.workspace = true
 
 [lints]
 workspace = true
